BACKLOG-10704 fix buttons alignment

--- a/core/src/main/resources/css/mdModuleManager.css
+++ b/core/src/main/resources/css/mdModuleManager.css
@@ -232,6 +232,10 @@
     margin-right: 8px;
 }
 
+.moduleManagerContainer .chip form {
+    height: 30px;
+}
+
 .moduleManagerContainer .moduleChipContainer {
     display: inline-flex;
 }
